@startuml

title __FRAMEMANAGERS's Class Diagram__\n

 namespace frameManagers {
      class frameManagers.FrameManager {
          # delay : int
          # down : ArrayList<ImageIcon>
          # left : ArrayList<ImageIcon>
          # right : ArrayList<ImageIcon>
          # up : ArrayList<ImageIcon>
          # forward : boolean
          # index : int
          + FrameManager()
          + getFrameAt()
          + getNextFrame()
      }
      class frameManagers.GhostFrameManager {
          - eatenDown : ImageIcon
          - eatenLeft : ImageIcon
          - eatenRight : ImageIcon
          - eatenUp : ImageIcon
          - frightened : ArrayList<ImageIcon>
          - frightenedDelay : int
          - frightenedForward : boolean
          - frightenedIndex : int
          + GhostFrameManager()
          + getNextFrameEaten()
          + getNextFrameFrightened()
      }
    class frameManagers.PacmanFrameManager {
          - death : ArrayList<ImageIcon>
          - deathDelay : int
          - deathIndex : int
          + PacmanFrameManager()
          + getNextFrameDeath()
      }
    }
  

  frameManagers.GhostFrameManager -up-|> frameManagers.FrameManager
  frameManagers.PacmanFrameManager -up-|> frameManagers.FrameManager
  sprites.Pacman o-- frameManagers.PacmanFrameManager : frameManager
  sprites.Ghost o-- frameManagers.GhostFrameManager : frameManager



@enduml
